--- a/build.gradle
+++ b/build.gradle
@@ -17,27 +17,19 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-def patternToFind = /src=['"](\S+)['"]/
-task hello  << {
-//File configFile = file('src/config.xml')
-//FileTree tree = fileTree('src').include('**/*.html')
-//tree.each{File file ->
-//println file
+task hello << {
+    fileTree('src').include('**/*.html').each { File file ->
+        println file
+        def patternToFind = /src=['"](\.\.)(\S+)['"]/
 
-//println matcher.count
-//println matcher[0]
-
-    File file = file('src/main/webapp/home.html')
-    def text = file.text
-
-//def matcher = (text =~ /$patternToFind/)
-//matcher.replaceAll("Tanya");
-    replacePatternInFile(file){
-        it.replaceAll(patternToFind, "src='www.google.com/\$1'")
+        replacePatternInFile(file) {
+            it.replaceAll(patternToFind, { all, parentDir, filePath ->
+                "src='www.google.com${filePath}'"
+            })
+        }
     }
-
-    println file.getText()
 }
+
 
 def replacePatternInFile(file, Closure replaceText) {
     file.write(replaceText(file.text))
